Change styling on navbar; fix 'about' section overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,8 @@
 /*------------------------------Colors*/
 
 /*-----------------------Navbar*/
-.navbar-light .navbar-nav .nav-link {
-    color: #242424
-}
-
-.navbar-light .navbar-brand {
-    color: #242424
+.navbar-light .navbar-nav .nav-link .navbar-light .navbar-brand {
+    color: #777777
 }
 
 
@@ -44,6 +40,7 @@
 
 .nav-item.active {
     text-decoration: underline;
+    color: #777777;
 }
 
 /*------------------------------Hero*/
@@ -61,43 +58,27 @@
     position: relative;
 }
 
-.hero-image-index {
+.hero-image {
     width: 100%;
     height: 400px;
-    background: url('/assets/images/hero.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
     background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     animation-name: hero-zoom;
     animation-duration: 4s;
     animation-fill-mode: forwards;
+}
+
+.hero-image-index {
+    background: url('/assets/images/hero.jpg');
 }
 
 .hero-image-clubs {
-    width: 100%;
-    height: 400px;
     background: url('/assets/images/hero.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    animation-name: hero-zoom;
-    animation-duration: 4s;
-    animation-fill-mode: forwards;
 }
 
 .hero-image-about {
-    width: 100%;
-    height: 400px;
     background: url('/assets/images/hero.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    animation-name: hero-zoom;
-    animation-duration: 4s;
-    animation-fill-mode: forwards;
 }
 
 .hero-image-contact {
@@ -112,11 +93,11 @@
 
 @keyframes hero-zoom {
     from {
-        transform: scale(1);
+        transform: scale(1.1);
     }
 
     to {
-        transform: scale(1.1);
+        transform: scale(1.2);
     }
 }
 
@@ -138,11 +119,11 @@
     font-weight: 700;
 }
 
-/*------------------------------About*/
+/*------------------------------Index Page About Section*/
 
 #about {
-    height: 500px;
     padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 #left-about {
@@ -163,7 +144,7 @@ hr {
     margin: 5px 0;
 }
 
-.left-about-heading {
+.left-about-heading .right-about-heading {
     width: 80%;
     line-height: 20px;
     clear: both;
@@ -173,13 +154,8 @@ hr {
 }
 
 .right-about-heading {
-    width: 80%;
-    line-height: 20px;
-    clear: both;
-    margin-bottom: 50px;
     float: left;
     text-align: right;
-    font-weight: 400;
 }
 
 .right-about h2 {
@@ -213,12 +189,12 @@ hr {
     border-radius: 50%;
 }
 
-/*------------------------------Club details*/
+/*------------------------------Index Page Club Details*/
 
 .club-index-info {
     font-family: Oswald, sans-serif;
     background-color: rgba(36, 36, 36, 0.70);
-    padding: 74px;
+    padding: 30px;
     text-align: center;
     vertical-align: center;
 }
